# barks-fantagraphics

./: comic_book.py  comics_info.py  consts.py  pyproject.toml  renumber-cbz.sh  requirements.txt  spelling.dic
Configs/: A Christmas for Shacktown.ini  A Cold Bargain.ini  Back to Long Ago!.ini  Biceps Blues.ini  Billions to Sneeze At.ini  Dangerous Disguise.ini  Darkest Africa.ini  Donald Duck's Atom Bomb.ini  Donald Duck's Worst Nightmare.ini  Donald of the Coast Guard.ini  Donald's Monster Kite.ini  Eyes in the Dark.ini  Fireman Donald.ini  Foxy Relations.ini  Gemstone Hunters.ini  Gladstone's Luck.ini  Gladstone's Usual Very Good Year.ini  Going Ape.ini  Good Neighbors.ini  Hobblin' Goblins.ini  Jet Rescue.ini  Knightly Rivals.ini  Land Beneath the Ground!.ini  Luck of the North.ini  Managing the Echo System.ini  Mystery of the Swamp.ini  New Toys.ini  Operation St. Bernard.ini  Pearls of Wisdom.ini  Picnic Tricks.ini  Riches, Riches, Everywhere!.ini  Santa's Stormy Visit.ini  Secret of Hondorica.ini  Serum to Codfish Cove.ini  Silent Night.ini  Singapore Joe.ini  Somethin' Fishy Here.ini  Statuesque Spendthrifts.ini  Super Snooper.ini  Swimming Swindlers.ini  (+63 more)
examples/: fantagraphics-info.py
extras/: read_stories.py  read_stories_and_sub_dates.py  read_sub_dates.py
story-indexes/: long-stories.txt  sub-dates-ch-cleaned.txt  sub-dates-cp-cleaned.txt  sub-dates-cs-cleaned.txt  sub-dates-cs.txt  sub-dates-dd-cleaned.txt  sub-dates-dd.txt  sub-dates-fg-cleaned.txt  sub-dates-giveaways.txt  sub-dates-ki-cleaned.txt  sub-dates-moc-cleaned.txt  sub-dates-os-cleaned.txt  (+8 more)
(+137 files in other folders)
